--- a/wp-content/themes/thatforagingwitch/app/views/templates/errors/500.twig
+++ b/wp-content/themes/thatforagingwitch/app/views/templates/errors/500.twig
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="{{ site.theme.link }}/dist/output.css" rel="stylesheet">
 
-        <title>Not found</title>
+        <title>Something went wrong</title>
 	</head>
 
-	<body class="{{ body_class }}">400</body>
+	<body class="{{ body_class }}">500</body>
 </html>
