--- a/wp-content/themes/thatforagingwitch/app/views/base.twig
+++ b/wp-content/themes/thatforagingwitch/app/views/base.twig
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html {{ site.language_attributes }}>
 
-    {% include 'html-header.twig' %}
+	{% include 'html-header.twig' %}
 
-    <body class="{{ body_class }}">
+	<body class="antialiased font-sans {{ body_class }}">
 
-        {% block content %}
-            <p>Sorry, no content</p>
-        {% endblock %}
+		{% include 'components/header.twig' %}
 
-        {% include 'html-footer.twig' %}
-    </body>
+		<main class='container mx-auto'>
+			{% block content %}
+				<p>Sorry, no content</p>
+			{% endblock %}
+		</main>
+
+		{% include 'components/footer.twig' %}
+
+		{% include 'html-footer.twig' %}
+	</body>
 </html>
