--- a/wp-content/themes/thatforagingwitch/app/views/html-header.twig
+++ b/wp-content/themes/thatforagingwitch/app/views/html-header.twig
@@ -1,10 +1,24 @@
 <head>
-    <title>{{ function('wp_title') }}</title>
-    <meta charset="{{ site.charset }}" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="pingback" href="{{ site.pingback_url }}" />
+	<meta charset="{{ site.charset }}"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<link rel="author" href="{{ site.theme.link }}/humans.txt"/>
+	<link rel="pingback" href="{{ site.pingback_url }}"/>
+	<link
+	rel="profile" href="http://gmpg.org/xfn/11">
 
-    {{ function('wp_head') }}
+	<!-- icon -->
+	<link rel='apple-touch-icon' sizes='180x180' href='{{ site.theme.link }}/app/src/public/apple-touch-icon.png'/>
+	<link rel='icon' type='image/png' sizes='32x32' href='{{ site.theme.link }}/app/src/public/favicon-32x32.png'/>
+	<link rel='icon' type='image/png' sizes='16x16' href='{{ site.theme.link }}/app/src/public/favicon-16x16.png'/>
+	<link rel='manifest' href='{{ site.theme.link }}/app/src/public/site.webmanifest'/>
+	<link rel='mask-icon' href='{{ site.theme.link }}/app/src/public/safari-pinned-tab.svg' color='#333333'/>
+	<meta name='msapplication-TileColor' content='#333333'/>
+	<meta name='theme-color' content='#333333'/>
+
+
+	<title>{{ function('wp_title') }}</title>
+	<meta name="description" content="{{ site.description }}">
+	{{ function('wp_head') }}
 </head>
