--- a/wp-content/themes/thatforagingwitch/app/views/components/header.twig
+++ b/wp-content/themes/thatforagingwitch/app/views/components/header.twig
@@ -1,1 +1,6 @@
-<header></header>
+<header class='py-4 lg:py-8'>
+	<div class='container mx-auto px-6 2xl:px-0 flex items-center justify-between'>
+		{% include 'components/logos/name-logo.twig' %}
+		{% include 'components/nav.twig' %}
+	</div>
+</header>
