--- a/wp-content/themes/thatforagingwitch/app/views/base.twig
+++ b/wp-content/themes/thatforagingwitch/app/views/base.twig
@@ -7,7 +7,7 @@
 
 		{% include 'components/header.twig' %}
 
-		<main class='container mx-auto px-6 2xl:px-0 mb-12 2xl:mb-16 prose-base prose-h1:font-serif prose-h2:font-serif prose-h3:font-serif'>
+		<main class='container mx-auto px-6 2xl:px-0 mb-12 2xl:mb-16 prose-base prose-h1:font-serif prose-h2:font-serif prose-h3:font-serif prose-a:underline prose-a:outline-none prose-a:font-semibold prose-a:decoration-ivory prose-a:decoration-2 prose-a:underline-offset-2'>
 			{% block content %}
 				<p>Sorry, no content</p>
 			{% endblock %}
