--- a/wp-content/themes/thatforagingwitch/app/views/components/footer.twig
+++ b/wp-content/themes/thatforagingwitch/app/views/components/footer.twig
@@ -1,7 +1,10 @@
 <footer class='py-12 xl:py-24 bg-white text-gray dark'>
-	<div class='container mx-auto px-6 2xl:px-0 grid grid-cols-4'>
+	<div class='container mx-auto px-6 2xl:px-0 grid grid-cols-1 lg:grid-cols-4 space-y-8'>
         <div>
             {% include 'components/logos/full-logo.twig' %}
         </div>
+        <div>asas</div>
+        <div>asasas</div>
+        <div>asasas</div>
 	</div>
 </footer>
