--- a/wp-content/themes/thatforagingwitch/app/views/components/nav.twig
+++ b/wp-content/themes/thatforagingwitch/app/views/components/nav.twig
@@ -1,1 +1,16 @@
-<nav>hav here</nav>
+<nav>
+	<ul class="flex items-center space-x-4">
+		<li>
+			<a href="/shop">
+				<span>Shop</span>
+			</a>
+		</li>
+		{% if is_logged_in %}
+			<li>
+				<a href="/my-account">
+					<span>Account</span>
+				</a>
+			</li>
+		{% endif %}
+	</ul>
+</nav>
